// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterBox should display properly when it's invalid and be red 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#DC045B",
        "borderRadius": 12,
        "borderWidth": 2,
        "height": 120,
        "justifyContent": "center",
        "padding": 12,
        "width": 120,
      },
      undefined,
    ]
  }
  testID="letterbox"
  validity="invalid"
>
  <Text
    style={
      [
        {
          "fontFamily": "Gotham-Medium",
          "fontSize": 48,
        },
        undefined,
      ]
    }
  >
    M
  </Text>
</View>
`;

exports[`LetterBox should display properly when it's misplaced and be yellow 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#E6CC00",
        "borderRadius": 12,
        "borderWidth": 2,
        "height": 120,
        "justifyContent": "center",
        "padding": 12,
        "width": 120,
      },
      undefined,
    ]
  }
  testID="letterbox"
  validity="misplaced"
>
  <Text
    style={
      [
        {
          "fontFamily": "Gotham-Medium",
          "fontSize": 48,
        },
        undefined,
      ]
    }
  >
    A
  </Text>
</View>
`;

exports[`LetterBox should display properly when it's valid and be green 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "backgroundColor": "#B3CC20",
        "borderRadius": 12,
        "borderWidth": 2,
        "height": 120,
        "justifyContent": "center",
        "padding": 12,
        "width": 120,
      },
      undefined,
    ]
  }
  testID="letterbox"
  validity="valid"
>
  <Text
    style={
      [
        {
          "fontFamily": "Gotham-Medium",
          "fontSize": 48,
        },
        undefined,
      ]
    }
  >
    B
  </Text>
</View>
`;
